 - Has a button to copy a HTML-report of an overview to clipboard

Abbreviation/Auto-correction now works also if it is placed right after an opening bracket.

Added new default driver definition for Starschema BigQuery JDBC Driver.

Updated French translations. Thanks to Erwan Duroselle.

Positions of SQL result tabs and of Session tabs can now be changed using drag and drop.



Bug fixes:

#939 DBCopy-Plugin: Copy to HSQLDB 2.0 failed because column lengths where not defined in create table statements for various column types.
    This problem existed for other RDBMSes too.

#464 (Feature request) Add tho double quotes to Copy as HTML to become XML well formed output.

Global Preference: "Select Object tree Nodes On Right Mouse Click" didn't work on windows.
  Thanks to Betsy Baxter

#1009 FileNotFoundException when trying to save write protected file. (Thanks to Johnathan James for the patch.)

#1060  When more result tabs than the maximum defined in Session properties are in execution, SQuirreL freezes.

Fixed bug in logging: Log level could not be set in log4j.properties file.

2759952 (Update fails unless run as admin on Vista): Fixed mis-spelled variable in squirrel-sql.bat which
caused the application updater to fail to work properly with Windows when UAC is enabled.  Thanks to user
dandar3 for the tip.


Tables cells that contained html where rendered incorrect. Now the plain html string is shown.

When schema info was refreshed (using F5) the SQL editor used to color tables as undefined (error red).

Column sorting indicator icon was lost when sorted column headers where dragged to reorder columns

2798081 Right click on column header changes sort order

On DB2 for AS400 column completion didn't work in some cases. (Thanks to Stefan Hohenstein for the patch.)

3575054: SQL results text mode is not working

Fixed repaint problem in Hibernate Plugin.

Code completion: When selecting a completion by tab, overwriting of subsequent characters does not stop